# dinesh-assistant-deployment

./: README.md  com.dinesh.assistant.plist  dinesh-assistant.service  monitor_service.py  network_monitor.py  pyproject.toml  requirements.txt  setup.py  start_server.sh  start_service.sh
.github/workflows/: python-app.yml
docs/: CHATBOT.md  DEPLOYMENT.md  HYBRID_ARCHITECTURE.md
src/: __init__.py  chatbot.py  main.py
src/config/: __init__.py  settings.py
src/training/: conversation_patterns.py  core_responses.py  domain_handler.py  domains.py  enhanced_responses.py  knowledge_base.py  knowledge_base_data.py  llm_knowledge_base.py  openai_knowledge_base.py  response_manager.py  response_patterns.py  topic_manager.py  training_manager.py
src/web/: __init__.py  app.py
src/web/static/: style.css
src/web/templates/: index.html
tests/: test_chatbot.py  test_conversation_patterns.py  test_training.py
text-docs/: HOW_IT_WORKS.txt  README.txt  SETUP_GUIDE.txt
